--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "next": "14.2.15",
     "or": "^0.2.0",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.3.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
