--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "install": "^0.13.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "or": "^0.2.0",
     "react": "^18",
-    "react-day-picker": "8.10.0",
+    "react-day-picker": "^9.4.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
