--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "next": "14.2.15",
     "or": "^0.2.0",
     "react": "^18",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
