--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.14.4",
     "install": "^0.13.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
