--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "framer-motion": "^11.14.4",
     "install": "^0.13.0",
     "lucide-react": "^0.451.0",
-    "next": "14.2.15",
+    "next": "^15.2.0-canary.33",
     "or": "^0.2.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
