--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.14.4",
+    "gsap": "^3.12.7",
     "install": "^0.13.0",
     "lucide-react": "^0.451.0",
     "next": "^15.2.0-canary.33",
